<resources>
    <string name="app_name">Prières musulmanes</string>
    <string name="tasbih_text" translatable="false">Tasbih</string>
    <string name="retour_text">Retour</string>
    <string name="tasbih_count_init_text" translatable="false">0/33</string>
    <string name="fajr_text" translatable="false">Fajr</string>
    <string name="shurooq_text" translatable="false">Shurooq</string>
    <string name="dhuhur_text" translatable="false">Dhuhur</string>
    <string name="asr_text" translatable="false">Asr</string>
    <string name="maghrib_text" translatable="false">Maghrib</string>
    <string name="isha_text" translatable="false">Isha</string>
    <string name="application_icon_text">Icone d\'application</string>
    <string name="patientez_message_text">Patientez s\'il vous plaît !</string>
    <string name="reinitialiser_text">Réinitialiser</string>
    <string name="no_gps_access_message">There is no access to your GPS !</string>
    <string name="gps_not_enabled_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings">GPS settings</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="consulter_les_prieres">Consulter les heures de prières</string>
    <string name="temps_pour_priere_text">\"Temps pour la prière de \"</string>
    <string name="a_text">à</string>
    <string name="qibla">Qibla</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="application_icon_description">Application Icon</string>
    <string name="feedback">Send Feedback</string>
    <string name="sunrise_text">Sunrise</string>
</resources>
