<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hrcompany.muslumprieres.TasbihActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:fontFamily="cursive"
        android:onClick="addCount"
        android:text="@string/tasbih_text"
        android:textAlignment="center"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="addCount"
        android:text="@string/tasbih_count_init_text"
        android:textAlignment="center"
        android:textSize="75sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRetour" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:onClick="closeActivity"
        android:padding="15dp"
        android:text="@string/retour_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRetour"
        android:layout_alignBottom="@+id/btnRetour"
        android:layout_alignEnd="@+id/titleTextView"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/reinitialiser_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="resetCount"/>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Total: 0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countTextView" />

</android.support.constraint.ConstraintLayout>
